# capybar

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: clippy.yml  nix.yml  rust.yml
examples/: basic.rs
examples/basic/: README.md  main.rs
examples/toml_config/: README.md  config.toml  config1.toml  main.rs
nix/: flake.nix  module.nix
src/: clock.rs  label.rs  lib.rs  main.rs  root.rs
src/config/: mod.rs
src/config/util/: font.rs  mod.rs  style.rs
src/config/widgets/: bar.rs
src/processes/: mod.rs
src/processes/clients/: mod.rs
src/processes/clients/hyprland/: keyboard.rs
src/services/: mod.rs
src/services/clients/: mod.rs
src/services/clients/hyprland/: keyboard.rs  mod.rs
src/util/: color.rs  drawer.rs  font.rs  fonts.rs  mod.rs  signals.rs
src/widget/: clock.rs  label.rs  mod.rs  widget.rs
src/widgets/: battery.rs  clock.rs  cpu.rs  icon_text.rs  keyboard.rs  label.rs  mod.rs  text.rs  widget.rs  workspaces.rs
src/widgets/containers/: bar.rs  container.rs  mod.rs  row.rs
tests/util/: color.rs  mod.rs  signals.rs
