[package]
name = "capybar"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
#Wayland handling
smithay-client-toolkit = "0.19.2"
wayland-client = "0.31.10"
wayland-protocols = "0.32.8"

#Error Handling
thiserror = "2.0.12"
anyhow = "1.0.98"

### Widget dependencies
#Fonts
fontconfig = "0.9.0"
fontdue = "0.9.3"
#Clock
chrono = "0.4.41"
#Battery
battery = "0.7.8"
#CPU
sysinfo = "0.35.1"
