[package]
name = "capybar"
description = "Wayland native toolbar"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/CapyCore/capybar"

[features]
default = [
    "keyboard+all"
]

hyprland = []

keyboard = []
"keyboard+hyprland" = ["keyboard", "hyprland"]
"keyboard+all" = ["keyboard", "keyboard+hyprland"]

[dependencies]
#Wayland handling
smithay-client-toolkit = "0.19.2"
wayland-client = "0.31.10"
wayland-protocols = "0.32.8"

#Error Handling
thiserror = "2.0.12"
anyhow = "1.0.98"

#Config
toml = "0.8.23"
serde = {version = "1.0.219", features = [ "derive" ] }

#CLI arguments
clap = {version = "4.5.41", features = [ "derive" ]}

### Widget dependencies
#Fonts
fontconfig = "0.9.0"
fontdue = "0.9.3"
#Clock
chrono = "0.4.41"
#Battery
battery = "0.7.8"
#CPU
sysinfo = "0.35.1"

hyprland = "0.4.0-beta"
